--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "gecl"
 version = "0.0.2"
 authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
-edition = "2018"
+edition = "2021"
 license = "Zlib"
 description = "geometry types and a color type"
 keywords = ["geometry", "color"]
@@ -12,4 +12,8 @@ readme = "README.md"
 
 [dependencies]
 num = "0.4.0"
-serde = { version = "1.0.136", optional = true, features = ["derive"] }
+serde = { version = "1.0.137", optional = true, features = ["derive"] }
+
+[package.metadata.release]
+dev-version = false
+pre-release-commit-message = "{{version}}"
